# github-copilot-demo

./: .gitignore  README.md  cheatsheet.md  instructor-script.md
.devcontainer/: devcontainer.json
.github/agents/: .gitkeep
.github/instructions/: .gitkeep
.github/prompts/: .gitkeep
golden-examples/documentation-track/sample-code/: shopping-cart.ts
golden-examples/skills-demo/documentation-skill/: SKILL.md
golden-examples/skills-demo/unit-testing-skill/: SKILL.md
golden-examples/testing-track/sample-code/: auth_service.py
sample-projects/: README.md
sample-projects/contoso-orders-python/: README.md  pyproject.toml  requirements.txt
sample-projects/contoso-orders-python/docs/: API.md
sample-projects/contoso-orders-python/src/: __init__.py  config.py  main.py
sample-projects/contoso-orders-python/src/api/: __init__.py  customers.py  orders.py  products.py
sample-projects/contoso-orders-python/src/legacy/: __init__.py  auth_provider.py
sample-projects/contoso-orders-python/src/models/: __init__.py  customer.py  order.py  product.py
sample-projects/contoso-orders-python/src/repositories/: __init__.py  base.py  order_repo.py
sample-projects/contoso-orders-python/src/schemas/: __init__.py  order_schemas.py
sample-projects/contoso-orders-python/src/services/: __init__.py  customer_service.py  order_service.py  payment_service.py
sample-projects/contoso-orders-python/tests/: __init__.py  conftest.py  test_customers.py  test_orders.py
starter-templates/: agent-template.agent.md  instructions-template.instructions.md  prompt-template.prompt.md
(+14 files in other folders)
